--- a/CarDealer/CarDealer/Views/Car/Details.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Details.cshtml
@@ -9,7 +9,8 @@
     Html.RenderPartial("SingleDataContainer", Model);
 }
 
-<p>
+<p class="center">
+    <br />
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "All")
 </p>
