--- a/CarDealer/CarDealer/Views/CarDealer/All.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/All.cshtml
@@ -22,9 +22,7 @@
 </div>
 
 <div class="rightmenu">
-    @{
-        Html.RenderPartial("Create", new CarDealer());
-    }
+    @{Html.RenderPartial("Create", new CarDealer());}
 </div>
 
 <div class="clear"></div>
