--- a/CarDealer/CarDealer/Views/Home/Index.cshtml
+++ b/CarDealer/CarDealer/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="welcome">
     @*@using (Html.BeginForm("Login", "Login"))
     {
         <fieldset class="right">
