--- a/CarDealer/CarDealer/Views/Car/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Delete.cshtml
@@ -1,17 +1,19 @@
-﻿@model CarDealerProject.Models.Car
+﻿
+@model CarDealerProject.Models.Car
 
 @{
     ViewBag.Title = "Delete car";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="center">Are you sure you want to delete this?</h3>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     Html.RenderPartial("SingleDataContainer", Model);
 
-    <p>
+    <p class="center">
+        <br />
         <input type="submit" value="Delete" />|
         @Html.ActionLink("Back to List", "All")
     </p>
