--- a/CarDealer/CarDealer/Views/Car/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Edit.cshtml
@@ -15,7 +15,7 @@
             $("#CarDealerId").val($(this).find('option:selected').val());
             $("#CarDealerName").val($(this).find('option:selected').text());
         });
-        
+
         $("#ManufactureDate").datepicker({ dateFormat: 'yy-mm-dd', showAnim: "fadeIn", changeYear: true, yearRange: '-40:+0', maxDate: '+0d' });
         $("#Year").datepicker({ dateFormat: 'yy', showAnim: "fadeIn", changeYear: true, maxDate: '+0d' });
     });
@@ -26,97 +26,95 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     
-    <fieldset>
-        <legend>Car</legend>
+    <div class="content center no-float">
+        <fieldset>
+            <legend>Car</legend>
 
-        @Html.HiddenFor(model => model.Id)
+            <div class="left">
+                <div>
+                    @Html.LabelFor(model => model.Brand)
+                    <br />
+                    @Html.EditorFor(model => model.Brand)
+                    @Html.ValidationMessageFor(model => model.Brand)
+                </div>
 
-        <div>
-            @Html.LabelFor(model => model.Brand)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.Brand)
-            @Html.ValidationMessageFor(model => model.Brand)
-        </div>
+                <div>
+                    @Html.LabelFor(model => model.Model)
+                    <br />
+                    @Html.EditorFor(model => model.Model)
+                    @Html.ValidationMessageFor(model => model.Model)
+                </div>
 
-        <div>
-            @Html.LabelFor(model => model.Model)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.Model)
-            @Html.ValidationMessageFor(model => model.Model)
-        </div>
+                <div>
+                    @Html.LabelFor(model => model.Year)
+                    <br />
+                    @Html.EditorFor(model => model.Year)
+                    @Html.ValidationMessageFor(model => model.Year)
+                </div>
 
-        <div>
-            @Html.LabelFor(model => model.Year)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.Year)
-            @Html.ValidationMessageFor(model => model.Year)
-        </div>
+                <div>
+                    @Html.LabelFor(model => model.ManufactureDate)
+                    <br />
+                    @Html.EditorFor(model => model.ManufactureDate)
+                    @Html.ValidationMessageFor(model => model.ManufactureDate)
+                </div>
 
-        <div>
-            @Html.LabelFor(model => model.ManufactureDate)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.ManufactureDate)
-            @Html.ValidationMessageFor(model => model.ManufactureDate)
-        </div>
+                <div>
+                    @Html.LabelFor(model => model.State)
+                    <br />
+                    @Html.EditorFor(model => model.State)
+                    @Html.ValidationMessageFor(model => model.State)
+                </div>
 
-        <div>
-            @Html.LabelFor(model => model.State)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.State)
-            @Html.ValidationMessageFor(model => model.State)
-        </div>
+                <div>
+                    @Html.LabelFor(model => model.Color)
+                    <br />
+                    @Html.EditorFor(model => model.Color)
+                    @Html.ValidationMessageFor(model => model.Color)
+                </div>
 
-        <div>
-            @Html.LabelFor(model => model.Description)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.Description)
-            @Html.ValidationMessageFor(model => model.Description)
-        </div>
+                <div>
+                    @Html.LabelFor(model => model.CarNumber)
+                    <br />
+                    @Html.EditorFor(model => model.CarNumber)
+                    @Html.ValidationMessageFor(model => model.CarNumber)
+                </div>
 
-        <div>
-            @Html.LabelFor(model => model.Color)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.Color)
-            @Html.ValidationMessageFor(model => model.Color)
-        </div>
 
-        <div>
-            @Html.LabelFor(model => model.CarNumber)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.CarNumber)
-            @Html.ValidationMessageFor(model => model.CarNumber)
-        </div>
 
-        <div>
-            @Html.LabelFor(model => model.CarDealerId)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.CarDealerId)
-            @Html.ValidationMessageFor(model => model.CarDealerId)
-        </div>
-        
-        <div>
-            @Html.LabelFor(model => model.CarDealerName)
-        </div>
-        <div>
-            @Html.EditorFor(model => model.CarDealerName)
-            @Html.ValidationMessageFor(model => model.CarDealerName)
-        </div>
 
-        <p>
+                <div>
+                    @Html.LabelFor(model => model.CarDealerId)
+                    <br />
+                    @Html.EditorFor(model => model.CarDealerId)
+                    @Html.ValidationMessageFor(model => model.CarDealerId)
+                </div>
+
+                <div>
+                    @Html.LabelFor(model => model.CarDealerName)
+                    <br />
+                    @Html.EditorFor(model => model.CarDealerName)
+                    @Html.ValidationMessageFor(model => model.CarDealerName)
+                </div>
+
+            </div>
+            <div class="right carImage"></div>
+            <div class="clear"></div>
+
+            <div>
+                @Html.LabelFor(model => model.Description)
+                <br />
+                @Html.TextAreaFor(model => model.Description, 10, 104, new Dictionary<string, string>())
+                @Html.ValidationMessageFor(model => model.Description)
+            </div>
+
+            <br />
             <input type="submit" value="Save" />
-        </p>
-    </fieldset>
+        </fieldset>
+    </div>
 }
 
-<div>
+<div class="center">
+    <br />
     @Html.ActionLink("Back to List", "All")
 </div>
