--- a/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
@@ -5,17 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="center">Are you sure you want to delete this?</h3>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
     Html.RenderPartial("SingleDataContainer", Model);
     
-    <p>
-        <input type="submit" value="Delete" />
-        |
+    <p class="center">
+        <br />
+        <input type="submit" value="Delete" /> |
         @Html.ActionLink("Back to List", "All")
     </p>
 }
