--- a/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
@@ -2,7 +2,7 @@
 
 <script>
     
-    //TODO LATER
+    //TODO LATER  - delete all chekced
     //$(document).ready(function () {
 
     //    $('#deleteAllSelected').on('click', function() {
@@ -36,36 +36,35 @@
 <h2>Car dealers</h2>
 <table id="CarDealersTable" class="left">
     <tr>
-        <th style="width: 150px;">
+        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th style="width: 110px;">
+        <th>
             @Html.DisplayNameFor(model => model.ParkingPlaces)
         </th>
-        <th style="width: 120px;">
+        <th>
             @Html.DisplayNameFor(model => model.Telephone)
         </th>
-        <th style="width: 130px;">
+        <th>
             @Html.DisplayNameFor(model => model.City)
         </th>
         
         <th></th>
     </tr>
 
-
     @foreach (var item in Model)
     {
         <tr>
-            <td class="crop" >
+            <td class="crop" style="width: 150px;">
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td class="crop" >
+            <td class="crop" style="width: 110px;">
                 @Html.DisplayFor(modelItem => item.ParkingPlaces)
             </td>
-            <td class="crop" >
+            <td class="crop" style="width: 120px;">
                 @Html.DisplayFor(modelItem => item.Telephone)
             </td>
-            <td class="crop" >
+            <td class="crop" style="width: 130px;">
                 @Html.DisplayFor(modelItem => item.City)
             </td>
 
