--- a/CarDealer/CarDealer/Views/CarDealer/Search.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Search.cshtml
@@ -13,12 +13,12 @@
             <input type="text" name="Name" />
         </div>
         
-        <div class="textSet full-width">
+        <div class="textSet">
             @Html.Label("Country")<br />
             @Html.DropDownList("Country", TempData["Countries"] as IEnumerable<SelectListItem>)
         </div>
         
-        <div class="textSet full-width">
+        <div class="textSet">
             @Html.Label("City")<br />
             @Html.DropDownList("City", TempData["Cities"] as IEnumerable<SelectListItem>)
         </div>
