--- a/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
+++ b/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
@@ -11,8 +11,7 @@
     <script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
 </head>
 <body class="wrap">
-    <div class="header center">
-    </div>
+    <div class="header center"></div>
 
     <div class="menu center">
         <span class="menuItem"> @Html.ActionLink("Home", "Index", "Home")  </span> 
@@ -26,9 +25,6 @@
 
     <div class="clear"></div>
 
-    <div class="footer center">
-    </div>
-
-
+    <div class="footer center"></div>
 </body>
 </html>
